Fix checkbox margin with checkbox__input alignment

--- a/frontend/components/forms/fields/Checkbox/_styles.scss
+++ b/frontend/components/forms/fields/Checkbox/_styles.scss
@@ -5,6 +5,10 @@
 
   &__input {
     opacity: 0;
+    width: 16px;
+    height: 16px;
+    margin: 2px;
+    transform: translateY(3px);
 
     &:focus + .fleet-checkbox__tick {
       &::after {
